# sentimen_analisis_guru

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/routes/: analyze_routes.py
app/schemas/: analyze_schema.py
app/services/: analyze_service.py
data/: reviews_clean.csv  reviews_raw.csv
docs/: README.md  api.md  arsitektur.md  business-layer.md  core-engine.md
output/: guru_action_result.json  guru_action_result_full.json  hasil_analisis_komentar.csv  hasil_rekomendasi_tindakan_per_guru.csv  hasil_risk_scoring_per_guru.csv  hasil_sentimen_per_guru.csv
src/sentimen_analisis/: action_recomender.py  aggregator.py  api_client.py  business_config.py  cleaner.py  fetch_data.py  issue_classifier.py  risk_scoring.py  sentiment_analyzer.py
src/sentimen_analisis/data/: issue_lexicon.py  sentiment_lexicon.py  slang.py
test/: test_aggregator.py  test_business.py  test_cleaner.py  test_issue.py  test_sentiment.py
